--- a/package.json
+++ b/package.json
@@ -10,17 +10,27 @@
   "license": "ISC",
   "devDependencies": {
     "browser-sync": "^2.27.7",
+    "del": "^6.0.0",
     "gulp": "^4.0.0",
     "gulp-autoprefixer": "^6.1.0",
     "gulp-clean-css": "^4.3.0",
     "gulp-concat": "^2.6.1",
+    "gulp-imagemin": "^8.0.0",
+    "gulp-imagemin-fix": "^5.0.4",
+    "gulp-jshint": "^2.1.0",
+    "gulp-newer": "^1.4.0",
+    "gulp-notify": "^4.0.0",
+    "gulp-plumber": "^1.2.1",
+    "gulp-pug": "^5.0.0",
     "gulp-sass": "^5.0.0",
-    "gulp-scss": "^1.1.2",
+    "gulp-scss": "^1.4.0",
     "gulp-uglify-es": "^3.0.0",
     "gulp-util": "^3.0.8",
+    "jshint": "^2.13.1",
     "sass": "^1.43.4"
   },
   "dependencies": {
+    "beepbeep": "^1.3.0",
     "check": "^1.0.0",
     "g": "^2.0.1",
     "npm": "^8.1.3",
