--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gulp-autoprefixer": "^6.1.0",
     "gulp-clean-css": "^4.3.0",
     "gulp-concat": "^2.6.1",
+    "gulp-file-include": "^2.3.0",
     "gulp-imagemin": "^8.0.0",
     "gulp-imagemin-fix": "^5.0.4",
     "gulp-jshint": "^2.1.0",
@@ -22,6 +23,7 @@
     "gulp-notify": "^4.0.0",
     "gulp-plumber": "^1.2.1",
     "gulp-pug": "^5.0.0",
+    "gulp-rigger": "^0.5.8",
     "gulp-sass": "^5.0.0",
     "gulp-scss": "^1.4.0",
     "gulp-uglify-es": "^3.0.0",
